<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menjarFragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/baseline_lunch_dining_24"
        android:title="@string/menjar" />

    <item
        android:id="@+id/begudesFragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/baseline_local_cafe_24"
        android:title="@string/begudes" />

    <item
        android:id="@+id/postresFragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/baseline_icecream_24"
        android:title="@string/postres" />

    <item
        android:id="@+id/pagamentFragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/baseline_attach_money_24"
        android:title="@string/pagament" />
</menu>